Fix spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,6 @@
  * Globals
  */
 
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
 html,
 body {
   height: 100%;
@@ -35,22 +28,21 @@ body {
   text-align: center;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  font-family: 'Roboto Slab', serif;
-}
+/*
+ * Devise
+ */
+
 
 .card-block {
   color: black;
-  text-align: left;
 }
 
 .auth-links a {
   color: black;
+}
+
+.form-group {
+  text-align: left;
 }
 
 .register-text {
@@ -58,7 +50,9 @@ h6, .h6 {
 }
 
 .login > .card {
-  width: 22rem;
-  margin: 0 auto;
-  float: none;
+  width: 25rem;
+  align: center;
+  margin: auto;
+  margin-top: 25px;
+  padding: 20px;
 }
